--- a/index.html
+++ b/index.html
@@ -10,7 +10,29 @@
 </head>
 <body>
 
-    <h2>Wakandan Talk</h2>
+   <nav id="nav-bar">
+       <div class="nav-title">Wakanda Forever</div>
+   </nav>
+
+   <main>
+
+       <textarea id="text-area" placeholder="Put your meassage here which you want to convert to wakandan language"></textarea>
+
+       <button id="btn-submit" type="submit">
+           Translate To Wakandan
+       </button>
+
+       <div id="content">Output will Appear here 👇</div>
+       <div id="output"> This is Output</div>
+
+   </main>
+
+   <footer>
+       <div id="footer-title">About</div>
+       <p id="footer-content">
+           Lorem ipsum dolor sit amet consectetur adipisicing elit. In ipsam quod magnam, eos numquam quidem necessitatibus dicta quos beatae est voluptates expedita eaque distinctio quasi, consequuntur sapiente veritatis quia! Enim.
+       </p>
+   </footer>
     
 
 
