--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
    <nav id="nav-bar">
-       <div class="nav-title">Wakanda Forever</div>
+       <div class="nav-title">Pirates </div>
    </nav>
 
    <main>
